--- a/styles.css
+++ b/styles.css
@@ -354,7 +354,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;   
-    padding-top: 20rem;
+    padding-top: 17.3rem;
     min-height: 100vh; 
  }
 
@@ -488,6 +488,11 @@
     font-size: 2rem;
 }
 
+#footer__logo:hover {
+    color: #f77062;
+    transition: ease-in;
+}
+
 .footer__links {
     width: 100%;
     max-width: 1000px;
@@ -524,7 +529,7 @@
 }
 
 .footer__link--items a:hover {
-    color: #e9e9e9;
+    color: #ff7b00;
     transition: 0.3s ease-out;
 }
 
@@ -569,6 +574,11 @@
 
 .website__rights {
     color: #fff;
+}
+
+.website__rights:hover {
+    color: #f77062;
+    transition: 0.5s ease;
 }
 
 @media screen and (max-width: 820px) {
